# Quantize

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.lock.txt  tsconfig.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LEARNING_LOG.md  MVP_PLAN.md  PRODUCT.md  STRATEGY_LANGUAGE.md
docs/ADRS/: 0001-technology-stack.md  0002-graph-representation.md  0003-historical-vs-incremental-execution.md  0004-database.md  0005-order-reconciliation.md
docs/plans/: 2026-06-23-quantize-foundation-design.md  2026-06-29-m2-registry-design.md  2026-06-29-m2-registry.md  2026-06-30-m2-completion-design.md  2026-06-30-m2-completion.md  2026-06-30-m2-port-compatibility-design.md  2026-06-30-m2-port-compatibility.md  2026-06-30-m2-semantic-validation-design.md  2026-06-30-m2-semantic-validation.md  2026-07-01-m3-runtime-design.md  2026-07-02-m4-engine-plan.md  2026-07-02-m5-strategy-b-plan.md  2026-07-02-m6-trace-construction-plan.md  2026-07-02-m7-persistence-plan.md  2026-07-02-m8-forward-replay-plan.md  2026-07-03-m10-implementation-plan.md  2026-07-03-m10-opus-packets.md  2026-07-03-m9-api-plan.md  2026-07-03-m9-implementation-plan.md  2026-07-03-pre-m9-remediation-plan.md  2026-07-04-m11-implementation-plan.md  2026-07-05-m12-implementation-plan.md  2026-07-06-m13-ide-reorientation-design.md  2026-07-06-m13-implementation-plan.md  2026-07-09-m13.8-component-navigation.md  2026-07-11-m13.9-closeout-plan.md  2026-07-11-m14-behavior-legibility-design.md  2026-07-11-m14-implementation-plan.md  2026-07-11-post-m14-roadmap-m15-m16.md  2026-07-12-m14.1-completion-plan.md  2026-07-13-m14.2-value-tap-inspector-plan.md  2026-07-14-m14.9-closeout-plan.md  2026-07-16-post-m14-founder-decisions.md  2026-07-17-m14.3-edge-hover-plan.md  2026-07-24-m14.4-desktop-viewport-fit.md  2026-07-24-m14.4-pr-body.md  M1_IMPLEMENTATION_PLAN.md  PLAN_TEMPLATE.md
docs/prompts/: m0-remediation.md
docs/reviews/: 2026-07-11-m13-gui-smoke-findings.md  2026-07-11-m13.9-journey-walkthrough.md  2026-07-15-m14-closeout.md  2026-07-16-s13-validation-runbook.md  2026-07-17-m14.3-edge-hover-walkthrough.md  2026-07-24-m14.4-viewport-walkthrough.md  M1_1_CODEX_REVIEW.md  M2_1_CODEX_REVIEW.md  M7_CODEX_REVIEW.md  M8_CODEX_REVIEW.md  M9_CODEX_REVIEW.md  PRE_M9_CODEX_REVIEW.md
quantize/: __init__.py  compatibility.py
quantize/api/: __init__.py  app.py  errors.py  instrumentation.py  parsing.py  service.py  settings.py  version.py
quantize/codegen/: __init__.py  __main__.py  pipeline.py  schema.py  typescript.py
quantize/components/: __init__.py  resolve.py
quantize/engine/: __init__.py  backtest.py  errors.py  fills.py  forward.py  metrics.py  orders.py  reconcile.py  records.py  schedule.py  state.py  trace.py
quantize/evaluator/: __init__.py  errors.py  evaluate.py  plan.py  preflight.py
quantize/market/: __init__.py  calendar.py  data.py
quantize/nodes/: __init__.py  _params.py  data.py  logic.py  output.py  portfolio.py  risk.py  transform.py  universe.py
quantize/persistence/: __init__.py  closure.py  database.py  datasets.py  documents.py  errors.py  migrations.py  provenance.py  records.py  runs.py  serialize.py
quantize/registry/: __init__.py  descriptor.py  errors.py  export.py  registry.py  schema_spec.py
quantize/runtime/: __init__.py  binding.py  diagnostics.py  summarize.py  values.py
quantize/schema/: __init__.py  components.py  document.py  nodes.py  primitives.py  provenance.py  schedule.py  semantics.py  serialization.py  types.py  version.py
quantize/tracing/: __init__.py  events.py  recorder.py  spec.py  tree.py  validate.py
quantize/validation/: __init__.py  diagnostics.py  errors.py  semantic.py  structural.py
quantize/valuetap/: __init__.py  service.py
schema/: quantize-api.schema.json  quantize.schema.json
scripts/: gate.ps1  gate.sh  node24.ps1  seed_demo.py
tests/: __init__.py  component_fixtures.py  conftest.py  engine_harness.py  golden_utils.py  helpers.py  market_fixture.py  node_harness.py  registry_fixtures.py  runtime_fixtures.py  stateful_fixture.py  test_binding_catalog.py  test_codegen_contract.py  test_codegen_determinism.py  test_codegen_gate.py  test_compatibility.py  test_component_evaluation.py  test_component_resolution.py  test_datetime_portability.py  test_engine_backtest.py  test_engine_cap_overflow.py  test_engine_fills.py  test_engine_reconcile.py  test_engine_schedule.py  test_engine_state_orders.py  test_evaluation_memo.py  test_evaluator.py  test_evaluator_plan.py  test_forward_replay.py  test_market_calendar.py  test_market_cursor.py  test_market_data.py  test_market_open_access.py  test_models.py  test_node_edge_models.py  test_nodes_descriptors.py  test_nodes_logic_portfolio.py  test_nodes_risk.py  test_nodes_transform.py  test_nodes_universe_data.py  (+33 more)
tests/api/: conftest.py  test_api_contract.py  test_app_logging.py  test_catalog_endpoint.py  test_component_execution.py  test_dataset_list.py  test_dataset_upload.py  test_error_mapping.py  test_hardening.py  test_meta.py  test_results_traces_endpoints.py  test_run_endpoint.py  test_strategy_component_endpoints.py  test_trace_tree.py  test_validate_endpoint.py  test_values_endpoint.py
tests/fixtures/: component_a.json  component_momentum.json  strategy_a.json  strategy_a_component.json  strategy_b.json
tests/goldens/: node_catalog.json  persisted_run_envelope.json  (+7 more)
ts/: quantize-api.d.ts  quantize-ir.d.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.test.json  vite.config.ts
(+153 files in other folders)
