[build-system]
# hatchling is intentionally unconstrained for now and may float independently; build-backend
# reproducibility (pinning/hashing the build deps) is deferred with the broader locking hardening.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantize"
version = "0.0.0"
description = "Quantize — a visual operating system for quantitative trading (runtime)"
readme = "README.md"
# Tested range supports 3.13 and 3.14; the M1.0 toolchain gate confirms the canonical version
# responsible for committed generated artifacts (see docs/plans/M1_IMPLEMENTATION_PLAN.md §6).
requires-python = ">=3.13,<3.15"
dependencies = [
    "pydantic>=2.9",
    # Runtime semantic validation (M2.4): validates node params against a descriptor's
    # parameter_schema, and validates declared schemas. Draft 2020-12 support requires >=4.18.
    "jsonschema>=4.20",
    # M9 API boundary: thin, versioned FastAPI JSON layer over the engine/persistence core.
    # FastAPI 0.115+ is validated against pydantic 2.x; uvicorn is the ASGI server for the
    # documented localhost run command. No numerics live here — this is a translation layer.
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # Upper-bounded to the lock's minor: the py3.13 CI leg installs this extra UNPINNED, and a ruff
    # beyond 0.15 started format-checking Python code blocks inside Markdown — flagging docs the
    # canonical 0.15.20 (requirements.lock.txt) accepts, so CI diverged from every local gate. Bump
    # the bound together with the lock.
    "ruff>=0.6,<0.16",
    "mypy>=1.11",
    # M9: FastAPI's TestClient (starlette) requires httpx as its in-process transport.
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["quantize"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["quantize", "tests"]

# jsonschema is a runtime dependency (M2.4 parameter validation; also the M1.3 contract test) that
# ships no type stubs. Ignore its missing imports rather than pull in a separate stub package.
[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
